@@ -4,6 +4,7 @@ Revision history for Dist-Zilla-Plugin-RewriteVersion-Transitional
           - now logging the number of version statements that were replaced
           - fix the name of the fallback version provider plugin used in
             [BumpVersionAfterRelease::Transitional] (shows up in log messages)
+          - removed addition of # TRIAL suffix to the repository files after release
 
 0.004     2015-01-19 03:49:55Z
           - avoid dying if [OurPkgVersion] is not installed
